Fix blur not showing in chrome and decrease fontsize

--- a/app/globals.css
+++ b/app/globals.css
@@ -117,7 +117,6 @@
 
 body {
     background-image: url("/bg.jpg");
-    backdrop-filter: opacity(0);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
